# TakeAwayPlatform

./: .gitignore  CMakeLists.txt  仓库介绍.md  设计说明书.docx  需求说明书.docx
config/: config.json
docs/: Postman测试方案.md  database_init.sql  后端开发计划.md  开发记录-20260708.md
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: address.ts  admin.ts  auth.ts  cart.ts  categories.ts  client.ts  dishes.ts  orders.ts
frontend/src/components/: Layout.tsx  Navbar.css  Navbar.tsx  ProtectedRoute.tsx  QuantityControl.css  QuantityControl.tsx  StatusBadge.tsx
frontend/src/contexts/: AuthContext.tsx  CartContext.tsx
frontend/src/pages/admin/: Admin.css  ConfigPage.tsx  DashboardPage.tsx  MerchantManagePage.tsx  UserManagePage.tsx
frontend/src/pages/auth/: Auth.css  LoginPage.tsx  RegisterPage.tsx
frontend/src/pages/customer/: AddressFormPage.tsx  AddressListPage.tsx  CartPage.tsx  CheckoutPage.tsx  Customer.css  DishDetailPage.tsx  HomePage.tsx  OrderDetailPage.tsx  OrderListPage.tsx
frontend/src/pages/merchant/: CategoryManagePage.tsx  DishFormPage.tsx  DishManagePage.tsx  Merchant.css  MerchantOrdersPage.tsx
frontend/src/styles/: global.css  tokens.css
frontend/src/types/: index.ts
include/: common.h  log.h  task_queue.h  thread_pool.h
shell/: README.md  build.sh  check.sh  clean.sh  deploy.sh  frontend-build.sh  frontend-deploy.sh  init_db.sh  restart.sh  run.sh  start.sh  stop.sh
src/: main.cpp
src/database/: db_handler.cpp  db_handler.h
src/http/: rest_server.cpp  rest_server.h
src/log/: log.cpp
src/middleware/: auth_middleware.h
src/services/: address_service.h  cart_service.h  category_service.h  dish_service.h  order_service.h  user_service.h
src/threading/: task_queue.cpp  thread_pool.cpp
src/utils/: json_utils.cpp  jwt_utils.h  order_state_machine.h  password_utils.h  response_utils.h
